--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - PORT=2456
       - NAME="Valheim - Krasosu"
       - WORLD="Alderaan"
-      - PASSWORD=${{ secrets.SERVER_PASSWORD }}
+      - PASSWORD=${SERVER_PASSWORD}
       - TZ=America/Chicago
       - PUBLIC=1
       - AUTO_UPDATE=1
@@ -21,7 +21,7 @@ services:
       - AUTO_BACKUP_DAYS_TO_LIVE=7
       - AUTO_BACKUP_ON_UPDATE=1
       - AUTO_BACKUP_ON_SHUTDOWN=1
-      - WEBHOOK_URL=${{ secrets.WEBHOOK_URL }}
+      - WEBHOOK_URL=${WEBHOOK_URL}
       - UPDATE_ON_STARTUP=1
     volumes:
       - ./saves:/home/steam/.config/unity3d/IronGate/Valheim
