--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   valheim:
-    image: mbround18/valheim:1.4.3
+    image: mbround18/valheim:latest
     container_name: valheim_server
     ports:
       - 2456:2456/udp
