chore(deployment): add  always-recreate-deps flag

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -55,4 +55,4 @@ jobs:
           stack_file_name: docker-compose.yml
           pull_images_first: true
           keep_files: 3
-          args: -p test up -d
+          args: -p test up -d  --always-recreate-deps
