--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -53,6 +53,7 @@ jobs:
           copy_stack_file: true
           deploy_path: /opt/valheim
           stack_file_name: docker-compose.yml
+          pre_deployment_command_args: down --remove-orphans
           pull_images_first: true
           keep_files: 3
-          args: -p test up -d  --always-recreate-deps
+          args: -p test up -d 
