enable discord notifications

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - AUTO_BACKUP_DAYS_TO_LIVE=7
       - AUTO_BACKUP_ON_UPDATE=1
       - AUTO_BACKUP_ON_SHUTDOWN=1
-      #- WEBHOOK_URL=${WEBHOOK_URL}
+      - WEBHOOK_URL=${WEBHOOK_URL}
       - UPDATE_ON_STARTUP=1
       - HTTP_PORT=2459
     volumes:
