--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
       - AUTO_BACKUP_DAYS_TO_LIVE=7
       - AUTO_BACKUP_ON_UPDATE=1
       - AUTO_BACKUP_ON_SHUTDOWN=1
+      - SCHEDULED_RESTART=1
+      - SCHEDULED_RESTART_SCHEDULE="0 4 * * *"
       - WEBHOOK_URL=${WEBHOOK_URL}
       - UPDATE_ON_STARTUP=1
       - HTTP_PORT=2459
