--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -34,7 +34,7 @@ jobs:
           file_name: .env
           
       - name: Deploy .env
-        uses: appleboy/scp-action@master
+        uses: appleboy/scp-action@v0.1.3
         with:
           host: ${{ secrets.SCP_HOST }}
           username: ${{ secrets.SCP_USERNAME }}
