--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -42,7 +42,7 @@ jobs:
           port: ${{ secrets.SCP_PORT }}
           source: ".env"
           target: "/opt/valheim/"
-          debug: true
+          tar_tmp_path: "/tmp/"
       
       - name: Start docker-compose Deployment
         uses: wshihadeh/docker-deployment-action@master
