--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - AUTO_UPDATE=1
       - AUTO_UPDATE_SCHEDULE="0 */1 * * *"
       - AUTO_BACKUP=1
-      - AUTO_BACKUP_SCHEDULE="*/15 * * * *"
+      - AUTO_BACKUP_SCHEDULE="0 */12 * * *"
       - AUTO_BACKUP_REMOVE_OLD=1
       - AUTO_BACKUP_DAYS_TO_LIVE=7
       - AUTO_BACKUP_ON_UPDATE=1
